--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,24 +1,27 @@
-name: Generate Datas
-
-on:
-  schedule: # execute every 12 hours
-  - cron: "* */12 * * *"
-  workflow_dispatch:
-  
-jobs:
-  build:
-    name: Jobs to update datas
-    runs-on: ubuntu-latest
-    steps:
-      # Snake Animation
+# Generates the snake  
       - uses: Platane/snk@master
-      id: snake-gif
-      with:
-        github_user_name: rodrigogcunha
-        svg_out_path: dist/github-contribution-grid-snake.svg
-- uses: crazy-max/ghaction-github-pages@v2.1.3
-with:
-  target_branch: output
-  build_dir: dist
-env:
-  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        id: snake-gif
+        with:
+          github_user_name: mishmanners
+          # these next 2 lines generate the files on a branch called "output". This keeps the main branch from cluttering up.
+          gif_out_path: dist/github-contribution-grid-snake.gif
+          svg_out_path: dist/github-contribution-grid-snake.svg
+
+     # show the status of the build. Makes it easier for debugging (if there's any issues).
+      - run: git status
+
+      # Push the changes
+      - name: Push changes
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: master
+          force: true
+
+      - uses: crazy-max/ghaction-github-pages@v2.1.3
+        with:
+          # the output branch we mentioned above
+          target_branch: output
+          build_dir: dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
